<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Inicial Setup Strings -->
    <string name="app_name">LCReporter</string>
    <string name="action_share">Compartilhar</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_sheep">SheepActivity</string>
    <string name="title_activity_eqp">EqpActivity</string>

    <!-- Fixed Text Strings -->
    <!-- Nucleo -->
    <string name="text_lider">Líder</string>
    <string name="text_colider">Co Líder</string>
    <string name="text_lt1">Líder em Treinamento 1</string>
    <string name="text_host">Hospedeiro</string>
    <string name="text_date">Data</string>

    <!-- Equipe -->
    <string name="text_eqp">Equipe</string>
    <string name="text_master">Lider de Equipe</string>
    <string name="text_rede">Rede</string>

    <!-- Ovelhas -->
    <string name="sheepText">Participantes</string>

    <!-- Button Strings -->
    <string name="button_next">Próximo</string>
    <string name="button_fill">Gerar</string>
    <string name="button_addContact">Adicionar Contato</string>
    <string name="button_addPeople">Adicionar Pessoa</string>

    <!-- Preferences -->
    <string name="pref_liderName">Nome do Lider</string>
    <string name="pref_coliderName">Nome do Co Líder</string>
    <string name="pref_lt1Name">Nome do Lider em Treinamento</string>
    <string name="pref_hostName">Nome do Hospedeiro</string>
    <string name="pref_team">Nome da Equipe</string>
    <string name="pref_group">Nome da Rede</string>

    <!-- Preferences Category -->
    <string name="pcat_lideranca">Liderança</string>
    <string name="pcat_nucleo">Núcleo</string>
    <string name="pref_summ_lider">Responsável pela Célula</string>
    <string name="pref_summ_rede">Arena Jovem, Adultos, Casais...</string>
    <string name="pref_redeName">Nome da Rede</string>
    <string name="pref_masterName">Nome do Líder de Equipe</string>
    <string name="pref_eqpName">Nome da Equipe</string>
    <string name="pref_summ_colider">Co resposável pela célula e suas atividades</string>
    <string name="pref_summ_lt1">Discípulo em processo de formação para assumir uma liderança</string>

    <!-- Item Layout -->
    <string name="item_firstLine">Nome</string>
    <string name="item_secondLine">Telefone</string>

    <!-- Add People Dialog -->
    <string name="dialog_username">Nome</string>
    <string name="dialog_celphone">Telefone</string>
    <string name="dialog_addPeople_title">ADICIONAR PESSOA</string>
    <string name="dialog_add_people">Adicionar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_delete_people">Remover</string>
    <string name="dialog_deletePeople_title">Remover</string>
    <string name="dialog_deletePeople_message">Deseja remover esta pessoa do relatório?</string>
    <string name="toast_removed">Removido</string>
    <string name="toast_undo">Desfazer</string>
    <string name="pref_date">20/08/1991</string>
    <string name="sendCsvFile">Compartilhar Via:</string>
    <string name="dialog_firstSetup_title">Configurar Conta</string>
    <string name="dialog_master_name">Nome do Lider de Equipe</string>
    <string name="dialog_eqp_name">Equipe</string>
    <string name="dialog_rede">Rede</string>
    <string name="dialog_email">Email</string>
    <string name="dialog_ok">OK</string>
    <string name="text_phone">Telefones</string>
    <string name="pref__summ_add_core">Adicionar Núcleo Perfeito em todo Relatório</string>
    <string name="pref_add_core">Núcleo Presente</string>
    <string name="dflt_email">nome@email.com</string>

</resources>
