<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_screen">

    <PreferenceCategory
        android:title="@string/pcat_nucleo"
        >
        <EditTextPreference
            android:title="@string/text_lider"
            android:key="pref_lider"
            android:defaultValue="@string/pref_liderName"
            android:summary="@string/pref_summ_lider" />

        <EditTextPreference
            android:title="@string/text_colider"
            android:key="pref_colider"
            android:defaultValue="@string/pref_coliderName"
            android:summary="@string/pref_summ_colider" />

        <EditTextPreference
            android:title="@string/text_lt1"
            android:key="pref_lt1"
            android:defaultValue="@string/pref_lt1Name"
            android:summary="@string/pref_summ_lt1" />

        <EditTextPreference
            android:title="@string/text_host"
            android:key="pref_host"
            android:defaultValue="@string/pref_hostName" />

        <EditTextPreference
            android:title="@string/text_date"
            android:key="pref_date"
            android:defaultValue="@string/pref_date" />

        <CheckBoxPreference
            android:title="@string/pref_add_core"
            android:key="pref_add_core"
            android:defaultValue="true"
            android:summary="@string/pref__summ_add_core" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/text_phone"
        android:key="pref_catPhone">

        <EditTextPreference
            android:title="@string/text_lider"
            android:key="pref_phone_lider"
            android:defaultValue="" />

        <EditTextPreference
            android:title="@string/text_colider"
            android:key="pref_phone_colider"
            android:defaultValue="" />

        <EditTextPreference
            android:title="@string/text_lt1"
            android:key="pref_phone_lt1"
            android:defaultValue="" />

        <EditTextPreference
            android:title="@string/text_host"
            android:key="pref_phone_host"
            android:defaultValue="" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pcat_lideranca" >
        <EditTextPreference
            android:title="@string/text_eqp"
            android:key="pref_eqp"
            android:defaultValue="@string/pref_eqpName" />

        <EditTextPreference
            android:title="@string/text_rede"
            android:key="pref_rede"
            android:defaultValue="@string/pref_redeName"
            android:summary="@string/pref_summ_rede" />

        <EditTextPreference
            android:title="@string/text_master"
            android:key="pref_master"
            android:defaultValue="@string/pref_masterName" />

        <EditTextPreference
            android:title="@string/dialog_email"
            android:key="pref_lemail"
            android:defaultValue="@string/dflt_email" />

    </PreferenceCategory>

    <CheckBoxPreference
        android:key="pref_config" />

</PreferenceScreen>