<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:text="@string/dialog_firstSetup_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/frame"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:textSize="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/text_lider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#444444"
            android:textStyle="bold|italic"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setup_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/dialog_username"
            android:singleLine="true"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/setup_lphone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/dialog_celphone"
            android:singleLine="true" />

        <!-- Equipe -->
        <TextView
            android:text="@string/text_eqp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#444444"
            android:textStyle="bold|italic"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setup_eqpname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/dialog_eqp_name"
            android:singleLine="true"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/setup_rede"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/dialog_rede"
            android:singleLine="true" />

        <EditText
            android:id="@+id/setup_mastername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/dialog_master_name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/setup_masteremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/dialog_email"
            android:singleLine="true" />

    </ScrollView>

</LinearLayout>