<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/fragment_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_addContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addContact"/>

    <Button
        android:text="@string/button_addPeople"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addPeople" />

    <Button
        android:text="@string/button_fill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="fillReport" />

</LinearLayout>